--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "http-status": "^2.1.0",
     "mongoose": "^8.10.0",
     "zod": "^3.24.2"
   },
